# PSINS-Develop-Group

./: .gitignore  LICENSE  README.md  readme.txt
DataSet/Low-accuracy/GNSS/: GPS_IMU-1M.txt
DataSet/Low-accuracy/Gyro/: single axis gyroscope.txt
Source/: CMakeLists.txt  Doxyfile  README.md  README.txt
Source/Alg/: PSINS.h
Source/Algorithm/: CMakeLists.txt  KFApp.cpp  KFApp.h  MathBase.cpp  MathBase.h  PSINS.cpp  PSINS.h  PSINSBase.cpp  PSINSBase.h  PSINSIO.cpp  PSINSIO.h  doxygen_mainpage.h
Source/demo/: CMakeLists.txt  demo.cpp
Source/demo1/: CMakeLists.txt  demo.cpp
