#Templates are created by Cattle 2018.12.2
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(PSINS)

#SET(CMAKE_C_COMPILER "/.....-gcc ")
#SET(CMAKE_CXX_COMPILER "/.....-g++ ")

if (CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPSINS_RMEMORY")
endif()

#find_package(Threads REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(Algorithm)

ADD_SUBDIRECTORY(demo1)
ADD_SUBDIRECTORY(Algorithm)
