#Templates are created by Cattle 2018.12.2

SET (LIB_PSINS_SRC PSINS.cpp)

SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY (PSINS SHARED ${LIB_PSINS_SRC})

ADD_LIBRARY (PSINS_static STATIC ${LIB_PSINS_SRC})

SET_TARGET_PROPERTIES (PSINS_static PROPERTIES OUTPUT_NAME "PSINS")


GET_TARGET_PROPERTY (OUTPUT_VALUE PSINS_static OUTPUT_NAME)

MESSAGE (STATUS "This is the PSINS_static OUTPUT_NAME: " ${OUTPUT_VALUE})

SET_TARGET_PROPERTIES (PSINS_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES (PSINS PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES (PSINS PROPERTIES VERSION 1.2 SOVERSION 1)
